--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://EcraepNahte.github.io/developerPortfolio,",
+  "homepage": "https://EcraepNahte.github.io/,",
   "name": "ethanpearce-developerfolio",
   "version": "0.1.0",
   "private": true,
